added followers and following counts in profiles' views
